<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/main_rg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/grey_f3f3f3"
        android:layout_alignParentBottom="true"
        android:padding="5dp">
        <RadioButton
            android:id="@+id/main_rb1"
            style="@style/main_rb"
            android:drawableTop="@drawable/main_rb1"
            android:text="@string/mainbar_label1"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/main_rb2"
            style="@style/main_rb"
            android:drawableTop="@drawable/main_rb2"
            android:text="@string/mainbar_label2"/>
        <RadioButton
            android:id="@+id/main_rb3"
            style="@style/main_rb"
            android:drawableTop="@drawable/main_rb3"
            android:text="@string/mainbar_label3"/>
        <RadioButton
            android:id="@+id/main_rb4"
            style="@style/main_rb"
            android:drawableTop="@drawable/main_rb4"
            android:text="@string/mainbar_label4"/>
    </RadioGroup>
    <LinearLayout
        android:id="@+id/main_layout_center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/main_rg">
    </LinearLayout>

</RelativeLayout>