<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".messagefrag.MessageFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/msg_top_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/msg_top_tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_top"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:paddingBottom="6dp"
            android:textColor="@color/mainbar_focus"/>
    </RelativeLayout>
    <View
        android:id="@+id/msg_line1"
        style="@style/line"
        android:layout_below="@id/msg_top_layout"/>

    <LinearLayout
        android:id="@+id/msg_mid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_below="@id/msg_line1"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/msg_mid_layout_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/msg_mid_iv_like"
                style="@style/msg_mid_iv"
                android:src="@mipmap/like"
                android:background="@drawable/msg_like_bg"
                android:onClick="onClick"
                tools:ignore="OnClick" />
            <TextView
                android:text="@string/msg_mid1"
                style="@style/msg_mid_tv"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/msg_mid_layout_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/msg_mid_iv_fans"
                style="@style/msg_mid_iv"
                android:src="@mipmap/fans"
                android:background="@drawable/msg_fans_bg"
                android:onClick="onClick"/>
            <TextView
                android:text="@string/msg_mid2"
                style="@style/msg_mid_tv"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/msg_mid_layout_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/msg_mid_iv_comment"
                style="@style/msg_mid_iv"
                android:src="@mipmap/comment"
                android:background="@drawable/msg_comment_bg"
                android:onClick="onClick"/>
            <TextView
                android:text="@string/msg_mid3"
                style="@style/msg_mid_tv"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/msg_line2"
        style="@style/line"
        android:layout_below="@id/msg_mid_layout"/>
    <ListView
        android:id="@+id/msg_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/msg_line2"
        android:padding="10dp"
        android:background="@color/white"
        android:divider="@color/grey_light"
        android:dividerHeight="1dp"
        android:scrollbars="none"/>

    <ImageButton
        android:id="@+id/main_btn_more"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/newbtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/drawable_add_btn_bg"
        android:onClick="onClick"/>
</RelativeLayout>